Creating BFS solver for shortest path (close #1)